src/emit/emitter/snapshots/hebi__emit__emitter__tests__func-5.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
fn test(a, *, b=10):
  print a, b

test(1)
test(1, b=2)


# Func:
function "test":
  frame_size: 7
  length: 40
  const (length=1):
    0: "b"
  code:
     0 | is_kw_param_not_set [0]
     2 | jump_if_false offset=19
     4 | nop 
     5 | nop 
     6 | nop 
     7 | nop 
     8 | push_small_int value=10
    13 | store_reg r5
    15 | jump offset=9
    17 | nop 
    18 | nop 
    19 | nop 
    20 | nop 
    21 | load_kw_param [0], r5
    24 | create_empty_list 
    25 | store_reg r6
    27 | load_reg r4
    29 | push_to_list r6
    31 | load_reg r5
    33 | push_to_list r6
    35 | print_list r6
    37 | push_none 
    38 | ret 
    39 | suspend 

function "code":
  frame_size: 6
  length: 41
  const (length=3):
    0: <function descriptor "test">
    1: "test"
    2: "b"
  code:
     0 | create_function [0]
     2 | store_global [1]
     4 | push_small_int value=1
     9 | store_reg r4
    11 | load_global [1]
    13 | call r4, args=1
    16 | push_small_int value=1
    21 | store_reg r5
    23 | create_empty_dict 
    24 | store_reg r4
    26 | push_small_int value=2
    31 | insert_to_dict_named [2], r4
    34 | load_global [1]
    36 | call_kw r4, args=1
    39 | ret 
    40 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━●
r5 │                             ●━━━━━━━━━━━━━━━━━━━━━━━●
r6 │                                 ●━━━━━━━━━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  16  17  18  
