src/emit/emitter/snapshots/hebi__emit__emitter__tests__loop_stmt-3.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
loop:
  break


# Func:
function "code":
  frame_size: 4
  length: 14
  const: <empty>
  code:
     0 | jump offset=12
     2 | nop 
     3 | nop 
     4 | nop 
     5 | nop 
     6 | jump_back offset=6
     8 | nop 
     9 | nop 
    10 | nop 
    11 | nop 
    12 | ret 
    13 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━●
r3 │             ●━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  
