src/emit/emitter/snapshots/hebi__emit__emitter__tests__meta_methods.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
class U: pass
class T(U):
  value = 0
  fn meta:add(self, other): pass
  fn add(self, other): pass


# Func:
function "add":
  frame_size: 5
  length: 3
  const: <empty>
  code:
    0 | push_none 
    1 | ret 
    2 | suspend 

function "add":
  frame_size: 5
  length: 3
  const: <empty>
  code:
    0 | push_none 
    1 | ret 
    2 | suspend 

function "code":
  frame_size: 8
  length: 30
  const (length=6):
    0: <class descriptor "U">
    1: "U"
    2: <class descriptor "T">
    3: <function descriptor "add">
    4: <function descriptor "add">
    5: "T"
  code:
     0 | create_class_empty [0]
     2 | store_global [1]
     4 | load_global [1]
     6 | store_reg r4
     8 | create_function [3]
    10 | store_reg r5
    12 | create_function [4]
    14 | store_reg r6
    16 | push_small_int value=0
    21 | store_reg r7
    23 | create_class [2], r4
    26 | store_global [5]
    28 | ret 
    29 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r5 │                         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r6 │                             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r7 │                                 ●━━━━━━━━━━━━━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  16  17  18  19  20  21  
